# chip8

./: .gitignore  .gitmodules  Cargo.toml  README.md  keypad_test.asm
.cargo/: config.toml
chip8-macros/: Cargo.toml
chip8-macros/src/: lib.rs
chip8cc/: Cargo.toml  README.md
chip8cc/grammar/: c.pest  labels.pest
chip8cc/src/: basicblock.rs  c.rs  errors.rs  labels.rs  lib.rs  main.rs
chip8cc/tests/: loop1.ch8sm
src/: driver.rs  emulator.rs  errors.rs  frontend.rs  graphics.rs  instructions.rs  lib.rs  main.rs
src/frontend/: egui.rs  mod.rs  raylib.rs
