[package]
name = "chip8"
version = "0.1.0"
edition = "2021"
default-run = "chip8"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "chip8"

[[bin]]
name = "assembler"


[lib]
crate-type = ["rlib","cdylib"]

[dependencies]
bitvec = "1.0.1"
clap = { version = "4.5.9", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
itertools = "0.13.0"
ndarray = "0.15.6"
rand = {version = "0.8.5"}
getrandom = { version = "0.2.15", features = ["js"] }
wasm-bindgen = {version="0.2.93"}
raylib = "5.0.1"
js-sys = "0.3.77"
cfg-if = "1.0.0"
lazy_static = "1.5.0"
egui-miniquad = "0.15.0"
miniquad = "0.4.0"
egui = "0.28.1"

