[package]
name = "chip8cc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type= ["rlib"]

[dependencies]
chip8 = {path = ".."}
clap = "4.5.20"
clio = "0.3.5"
itertools = "0.13.0"
pest = "2.7.14"
pest_consume = "1.1.3"
pest_derive = { version = "2.7.14", features = ["grammar-extras"] }
